<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="577dp"
        android:layout_height="883dp"
        android:contentDescription="@string/background2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />


    <Button
        android:id="@+id/btnShowDetails"
        android:layout_width="214dp"
        android:layout_height="53dp"
        android:layout_marginBottom="92dp"
        android:text="@string/show_playlist_details"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp" />




    <TextView
        android:id="@+id/tvAverage"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="92dp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="354dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:text="@string/back_to_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="76dp" />


    <Button
        android:id="@+id/btnAverage"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/averages"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddToPlaylist"
        android:layout_width="316dp"
        android:layout_height="89dp"
        android:background="#EE000000"
        android:text="@string/add_to_playlist"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <ListView
        android:id="@+id/lvDetails"
        style="@android:style/Widget.Material.Light.ListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tap_a_song_to_remove_it"
        android:textColor="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddToPlaylist" />

    <ListView
        android:id="@+id/lvPlaylist"
        style="@android:style/Widget.Material.Light.ListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@color/white"
        android:paddingTop="12dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="@id/tvInstruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>